# nexus

./: .env.example  .env.production.template  .gitignore  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: agent.py  approvals.py  auth.py  billing.py  chat.py  docs.py  github.py  reports.py  roadmap.py  workspace.py
apps/api/app/core/: rbac.py  security.py  settings.py
apps/api/app/db/: database.py
apps/api/app/schemas/: agent.py  approvals.py  auth.py  billing.py  chat.py  docs.py  github.py  reports.py  workspace.py
apps/api/app/services/: approval_service.py  billing_service.py  chat_service.py  deepagents_runtime.py  docs_service.py  execution_log_service.py  github_integration_service.py  github_service.py  oauth_service.py  report_service.py  workspace_service.py
apps/api/tests/: conftest.py  test_agent_hitl.py  test_billing.py  test_billing_hitl.py  test_docs_and_chat.py  test_github_integration.py  test_github_reports_agent.py  test_health.py  test_oauth_github_paths.py  test_workspace_rbac.py
docs/: API_EXAMPLES.md  ARCHITECTURE.md  CHANGELOG.md  E2E_REAL_OAUTH_GITHUB_CHECKLIST.md  PRD.md  ROADMAP.md  VALIDATION_LOG.md  WORK_SUMMARY.md
scripts/: check_real_integration_env.py
