[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gws-deepagent-workspace"
version = "0.1.0"
description = "DeepAgents 기반 Google Workspace 자동화 SaaS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[project.optional-dependencies]
deepagents = [
  "deepagents>=0.1.0",
  "langgraph>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["apps/api"]

[tool.pytest.ini_options]
pythonpath = ["apps/api"]
testpaths = ["apps/api/tests"]
